...
            },
            child: CreateImageUtils.getUserImageMemory(selectedImagePath,
                MediaQuery.of(context).size.width > Constants.limitWidth),
          ),
        ]);

        pageName = 'Profile Image';
        break;
      case 4:
        page = CategoriesForm(
          selectedCategories: selectedCategories,
        );
        pageName = 'Categories';
        break;
      default:
        page = CredentialsInformationForm(
          emailController: _emailController,
          passwordController: _passwordController,
        );
...
        transitionBetweenRoutes: false,
        trailing: _currentPage == 4
            ? CupertinoButton(
                padding: const EdgeInsets.all(3),
                onPressed: () => {managePage()},
                child: Text(
                  _isEnteredWithGoogle ? 'Sign in' : 'Register',
                  style: TextStyle(
                      fontSize: 16,
                      color: CupertinoTheme.of(context).primaryColor,
                      fontWeight: FontWeight.bold),
                ),
              )
...
                              },
                          padding: const EdgeInsets.symmetric(horizontal: 50),
                          color: CupertinoTheme.of(context).primaryColor,
                          borderRadius: BorderRadius.circular(20),
                          child: _currentPage < 4
                              ? const Text(
                                  'Next',
                                  style:
                                      TextStyle(color: CupertinoColors.white),
                                )
                              : const SizedBox.shrink()),
                    const SizedBox(height: 20),
                  ],
...
      if (isEmailTaken) {
        debugPrint('Email is already taken');
        if (!mounted) return;
        showCupertinoDialog(
          context: context,
          builder: (context) => CupertinoAlertDialog(
            title: const Text('Invalid choice'),
            content: const Text('Email is already taken.'),
            actions: [
              CupertinoDialogAction(
                child: const Text('OK'),
                onPressed: () => Navigator.pop(context),
              ),
            ],
          ),
        );
        return;
...
        debugPrint('Username is already taken');
        if (!mounted) return;
        showCupertinoDialog(
          context: context,
          builder: (context) => CupertinoAlertDialog(
            title: const Text('Invalid choice'),
            content: const Text('Username is already taken.'),
            actions: [
              CupertinoDialogAction(
                child: const Text('OK'),
                onPressed: () => Navigator.pop(context),
              ),
            ],
...
