...
                    _passwordController.text, ref);
              }
            },
            padding: const EdgeInsets.symmetric(horizontal: 50),
            color: CupertinoTheme.of(context).primaryColor,
            borderRadius: BorderRadius.circular(20),
            child: const Text('Login',
                style: TextStyle(color: CupertinoColors.white)),
          ),
          const SizedBox(height: 20),
          CupertinoButton(
              onPressed: () => _signInWithGoogle(context, ref),
              color: CupertinoColors.systemBlue,
...
                  FaIcon(
                    FontAwesomeIcons.google,
                    color: CupertinoColors.white,
                  ),
                  SizedBox(width: 8),
                  Text(
                    'Sign In with Google',
                    style: TextStyle(
                      color: CupertinoColors.white,
                    ),
                  ),
                ],
              )),
...
      Navigator.of(context).pop();
      debugPrint("Failed to login: $e");
      showCupertinoDialog(
        context: context,
        builder: (BuildContext context) {
          return CupertinoAlertDialog(
            title: const Text('Login Failed'),
            content: Text('Failed to login: $errorMessageSubstring'),
            actions: <Widget>[
              CupertinoDialogAction(
                child: const Text('OK'),
                onPressed: () {
                  Navigator.of(context).pop();
...
          border: Border.all(
            color: CupertinoColors.systemGrey4,
            width: 2.0,
          )),
      validator: (String? value) {
        if (value == null || value.isEmpty) {
          return 'Please enter a password';
        }
        if (value.length < 6) {
          return 'Password must be at least 6 characters long';
        }
        return null;
      },
...
        final RegExp emailRegex = RegExp(
          r'^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$',
          caseSensitive: false,
          multiLine: false,
        );
        if (value == null || value.isEmpty || !emailRegex.hasMatch(value)) {
          return 'Please enter a valid email address';
        }
        return null; // Return null if the input is valid
      },
      prefix: const Padding(
        padding: EdgeInsets.only(right: 8.0),
        child: Icon(
...
